# esp32s3-voice

idf54_demo/: CMakeLists.txt
idf54_demo/main/: CMakeLists.txt
main/audio_codecs/: box_audio_codec.cc
tts_only/: CMakeLists.txt  README.md  sdkconfig.defaults
tts_only/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  main.cc  stream_ws_tts.c
tts_only/main/audio_codecs/: audio_codec.cc  audio_codec.h  no_audio_codec.cc  no_audio_codec.h
